[gd_scene load_steps=5 format=3 uid="uid://bj6iuse67y4gl"]

[ext_resource type="Script" path="res://Script/TestPlayer.gd" id="1_y61al"]
[ext_resource type="Material" uid="uid://brmlmtpgp5cya" path="res://Material/shader_material.tres" id="2_ycshh"]

[sub_resource type="SphereMesh" id="SphereMesh_2ikhj"]
lightmap_size_hint = Vector2i(17, 9)
flip_faces = true
uv2_padding = 0.0
rings = 64

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_cr308"]
buffer_length = 0.25

[node name="Sphere" type="Node3D" node_paths=PackedStringArray("geo", "player", "audio_stream")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0.203564, -0.109128, 0.122446)
script = ExtResource("1_y61al")
enable = true
geo = NodePath("MeshInstance3D")
player = NodePath("FFmpegNode")
audio_stream = NodePath("Player")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
material_override = ExtResource("2_ycshh")
cast_shadow = 0
gi_mode = 0
mesh = SubResource("SphereMesh_2ikhj")

[node name="FFmpegNode" type="FFmpegNode" parent="."]

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_cr308")
autoplay = true

[connection signal="async_loaded" from="FFmpegNode" to="." method="_load_finish"]
[connection signal="audio" from="FFmpegNode" to="." method="push_audio"]
[connection signal="error" from="FFmpegNode" to="." method="error_feedback"]
[connection signal="message" from="FFmpegNode" to="." method="message_feedback"]
